@@ -1,0 +1,36 @@
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
+    xmlns:tal="http://xml.zope.org/namespaces/tal"
+    xmlns:metal="http://xml.zope.org/namespaces/metal"
+    xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+    lang="en"
+    metal:use-macro="context/main_template/macros/master"
+    i18n:domain="plone">
+<body>
+
+<metal:content-description fill-slot="content-description">
+  <div class="documentDescription" i18n:translate="" 
+          tal:content="python: context.html2text(context.description.output)"
+          tal:condition="python: context.description.output">
+  </div>
+</metal:content-description>
+
+<metal:content-core fill-slot="content-core">
+<metal:block define-macro="content-core" tal:define="size context/image/getSize">
+  <figure class="image-product">
+    <a class="discreet"
+        tal:attributes="href string:${context/@@plone_context_state/object_url}/image_view_fullscreen"
+        tal:define="scale context/@@images;
+                    img_tag python:scale.scale('image', scale='large').tag()"
+        tal:on-error="string: Image cannot be displayed">
+    <img tal:replace="structure img_tag" />
+    <figcaption class="discreet">
+      <strong class="sr-only" i18n:translate="label_click_to_view_full_image">Click to view full-size image&hellip;</strong>
+      <span><tal:span i18n:translate="label_size">Size</tal:span>: <tal:span tal:replace="python:size/1024"> File size </tal:span>KB</span>
+    </figcaption>
+    </a>
+  </figure>
+</metal:block>
+</metal:content-core>
+
+</body>
+</html>
