@@ -1,0 +1,12 @@
+<?xml version="1.0"?>
+<object
+    i18n:domain="plone"
+    meta_type="Dexterity FTI"
+    name="Image"
+    xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+
+    <!-- Changed schema file -->
+    <property name="klass">wise.content.browser.overrides.ImageOverride</property>
+    <property name="model_file">wise.content.schema:image.xml</property>
+
+</object>
