@@ -16,3 +16,12 @@ def upgrade_to_3(context):
 
     # need to reimport wise.content, it has updated workflow settings
     context.runImportStepFromProfile(default_profile, 'workflow')
+
+
+def upgrade_to_4(context):
+    logger.info("Upgrading to 4")
+
+    # need to reimport wise.content, it has updated type settings
+    context.runImportStepFromProfile(default_profile, 'typeinfo')
+
+    logger.info("Upgrade finished.")
